Added ag-grid example

--- a/app/index.html
+++ b/app/index.html
@@ -111,6 +111,7 @@
     <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="bower_components/ng-grid/build/ng-grid.min.js"></script>
+    <script src="bower_components/ag-grid/dist/ag-grid.min.js"></script>
     <script src="bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="bower_components/angular-xeditable/dist/js/xeditable.min.js"></script>
     <script src="bower_components/appverse-web-html5-core/dist/appverse/appverse.js"></script>
@@ -181,6 +182,7 @@
 
     <script src="scripts/controllers/rest-controller-code.js"></script>
     <script src="scripts/controllers/rest-ng-repeat-code.js"></script>
+    <script src="scripts/controllers/users-controller-code.js"></script>
     <script src="scripts/controllers/detection-controller-code.js"></script>
     <script src="scripts/controllers/webworkers-controller-code.js"></script>
     <script src="scripts/controllers/translation-controller-code.js"></script>
