--- a/app/index.html
+++ b/app/index.html
@@ -5,40 +5,46 @@
 <!--[if gt IE 8]><!-->
 <!--<html class="no-js" manifest="cache.manifest">-->
 <html class="no-js">
-    <!--<![endif]-->
+<!--<![endif]-->
 
-    <head>
+<head>
     <title data-ng-bind="$state.current.name">
         showcase
     </title>
     <meta charset="utf-8">
-        <meta content="IE=edge" http-equiv="X-UA-Compatible">
-        <meta content="" name="description">
-        <meta content="width=device-width" name="viewport">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="" name="description">
+    <meta content="width=device-width" name="viewport">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css styles/vendor.css -->
-        <link href="bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">
-        <link href="bower_components/ng-grid/ng-grid.min.css" rel="stylesheet">
-        <link href="bower_components/angular-ui-select/dist/select.min.css" rel="stylesheet">
-        <link href="bower_components/angularjs-slider/dist/rzslider.min.css" rel="stylesheet">
-        <link href="bower_components/selectize/dist/css/selectize.css" rel="stylesheet">
-        <link href="bower_components/angular-chart.js/dist/angular-chart.css" rel="stylesheet">
-        <link href="bower_components/highlightjs/styles/github.css" rel="stylesheet">
+    <link href="bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">
+    <link href="bower_components/ng-grid/ng-grid.min.css" rel="stylesheet">
+    <link href="bower_components/angular-ui-select/dist/select.min.css" rel="stylesheet">
+    <link href="bower_components/angularjs-slider/dist/rzslider.min.css" rel="stylesheet">
+    <link href="bower_components/selectize/dist/css/selectize.css" rel="stylesheet">
+    <link href="bower_components/angular-chart.js/dist/angular-chart.css" rel="stylesheet">
+    <link href="bower_components/highlightjs/styles/github.css" rel="stylesheet">
     <!-- endbuild -->
 
     <!-- build:css(.tmp) styles/styles.css -->
-        <link href="styles/bootstrap-theme.css" rel="stylesheet">
-        <link href="styles/main.css" rel="stylesheet">
+    <link href="styles/bootstrap-theme.css" rel="stylesheet">
+    <link href="styles/main.css" rel="stylesheet">
     <!-- endbuild -->
-    </head>
+</head>
 
-    <!--Include the module with the app scope-->
+<!--Include the module with the app scope-->
 
-    <body data-ng-app="showcaseApp">
-        <!--[if lt IE 7]> <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p> <![endif]-->
+<body data-ng-app="showcaseApp">
+    <!--[if lt IE 7]> 
+        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
 
-        <!--[if lt IE 9]> <script src="bower_components/es5-shim/es5-shim.js"></script> <script src="bower_components/json3/lib/json3.min.js"></script> <![endif]-->
+    <!--[if lt IE 9]>
+        <script src="bower_components/es5-shim/es5-shim.min.js"></script>
+        <script src="bower_components/es5-shim/es5-sham.min.js"></script>
+        <script src="bower_components/json3/lib/json3.min.js"></script>
+    <![endif]-->
 
     <!-- HEADER/NAVIGATION BAR
      This is the unnamed root, aka index.html
@@ -47,7 +53,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
 
         <div class="navbar-header">
-                <button class="navbar-toggle" data-target="#main-navbar-collapse" data-toggle="collapse" type="button">
+            <button class="navbar-toggle" data-target="#main-navbar-collapse" data-toggle="collapse" type="button">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -69,34 +75,34 @@
                  will set the links to 'active' if, for example on the first link, 'contacts' or any of
                  its descendant states are activated. -->
                 <li ui-sref-active="active">
-                        <a angular-ripple="" ui-sref="home">
-                            <i class="glyphicon glyphicon-home"></i>
-                            Home</a>
+                    <a angular-ripple="" ui-sref="home">
+                        <i class="glyphicon glyphicon-home"></i> Home
+                    </a>
                 </li>
                 <li ui-sref-active="active">
-                        <a angular-ripple="" ui-sref="theme">
-                            <i class="glyphicon glyphicon-pencil"></i>
-                            UI</a>
+                    <a angular-ripple="" ui-sref="theme">
+                        <i class="glyphicon glyphicon-pencil"></i> UI
+                    </a>
                 </li>
                 <li ui-sref-active="active">
-                        <a angular-ripple="" ui-sref="rest">
-                            <i class="glyphicon glyphicon-th"></i>
-                            Content</a>
+                    <a angular-ripple="" ui-sref="rest">
+                        <i class="glyphicon glyphicon-th"></i> Content
+                    </a>
                 </li>
                 <li ui-sref-active="active">
-                        <a angular-ripple="" ui-sref="webworkers">
-                            <i class="glyphicon glyphicon-plane"></i>
-                            Performance</a>
+                    <a angular-ripple="" ui-sref="webworkers">
+                        <i class="glyphicon glyphicon-plane"></i> Performance
+                    </a>
                 </li>
                 <li ui-sref-active="active">
-                        <a angular-ripple="" ui-sref="security">
-                            <i class="glyphicon glyphicon-lock"></i>
-                            Security</a>
+                    <a angular-ripple="" ui-sref="security">
+                        <i class="glyphicon glyphicon-lock"></i> Security
+                    </a>
                 </li>
                 <li ui-sref-active="active">
-                        <a angular-ripple="" ui-sref="about">
-                            <i class="glyphicon glyphicon-info-sign"></i>
-                            About</a>
+                    <a angular-ripple="" ui-sref="about">
+                        <i class="glyphicon glyphicon-info-sign"></i> About
+                    </a>
                 </li>
             </ul>
         </div>
@@ -109,7 +115,7 @@
          It will be populate by its immediate children's templates/views unless otherwise
          explicitly named views are targeted.
      -->
-        <div autoscroll="false" class="fade-in" ui-view=""></div>
+    <div autoscroll="false" class="fade-in" ui-view=""></div>
 
     <!-- build:js scripts/scripts.js -->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
@@ -134,8 +140,8 @@
     <script src="bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
     <script src="bower_components/highlightjs/highlight.pack.js"></script>
     <script src="bower_components/angular-highlightjs/angular-highlightjs.min.js"></script>
-        <script src="bower_components/clipboard/dist/clipboard.min.js"></script>
-        <script src="bower_components/ngclipboard/dist/ngclipboard.min.js"></script>
+    <script src="bower_components/clipboard/dist/clipboard.min.js"></script>
+    <script src="bower_components/ngclipboard/dist/ngclipboard.min.js"></script>
     <script src="bower_components/qrcode/lib/qrcode.min.js"></script>
     <script src="bower_components/angular-qr/angular-qr.min.js"></script>
     <script src="bower_components/IndexedDBShim/dist/indexeddbshim.min.js"></script>
@@ -197,6 +203,6 @@
     <script src="scripts/controllers/translation-controller-code.js"></script>
     <script src="scripts/controllers/simpleidb-controller-code.js"></script>
     <script src="scripts/controllers/websocket-controller-code.js"></script>
-    </body>
+</body>
 
 </html>
