Fixed scale Added saving animation

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     <meta charset="utf-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="" name="description">
-    <meta content="width=device-width" name="viewport">
+    <meta content="initial-scale=1, width=device-width" name="viewport">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css styles/vendor.css -->
