Replaced about section with getting started section

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
 <!--Include the module with the app scope-->
 
 <body data-ng-app="showcaseApp">
-    <!--[if lt IE 7]> 
+    <!--[if lt IE 7]>
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
@@ -100,8 +100,8 @@
                     </a>
                 </li>
                 <li ui-sref-active="active">
-                    <a angular-ripple="" ui-sref="about">
-                        <i class="glyphicon glyphicon-info-sign"></i> About
+                    <a angular-ripple="" ui-sref="generator">
+                        <i class="glyphicon glyphicon-info-sign"></i> Getting started
                     </a>
                 </li>
             </ul>
