Fixed copy task for theme images

--- a/app/index.html
+++ b/app/index.html
@@ -64,9 +64,7 @@
                  then to navigate to a state. When this link is clicked it will take the application
                  to the 'home' state. Behind the scenes the directive also adds the correct href attr
                  and url. -->
-            <a class="navbar-brand" ui-sref="home">
-                showcase
-            </a>
+            <a class="navbar-brand" ui-sref="home"> </a>
         </div>
 
         <div class="collapse navbar-collapse" id="main-navbar-collapse">
