Changues in security

--- a/app/index.html
+++ b/app/index.html
@@ -191,6 +191,12 @@
     <script src="bower_components/angular-cache/dist/angular-cache.min.js"></script>
     <script src="bower_components/appverse-web-html5-core/dist/appverse-cache/appverse-cache.js"></script>
 
+    <!-- SECURITY MODULE -->
+    <script src="bower_components/appverse-web-html5-security/dist/appverse-security/appverse-security.min.js"></script>
+    <script src="bower_components/appverse-web-html5-security/dist/appverse-html5-security.min.js"></script>
+    <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.min.js"></script>
+
     <!-- endbuild -->
 
     <script src="scripts/controllers/rest-controller-code.js"></script>
