Updated to appverse html5 1.0 Updated karma and phantomjs Added security roles demo Added link to Appverse Security API Remove webworker controller from instrumentation Added e2e tests to increase coverage

--- a/app/index.html
+++ b/app/index.html
@@ -93,7 +93,7 @@
                     </a>
                 </li>
                 <li ui-sref-active="active">
-                    <a angular-ripple="" ui-sref="security">
+                    <a angular-ripple="" ui-sref="oauth">
                         <i class="glyphicon glyphicon-lock"></i> Security
                     </a>
                 </li>
@@ -175,14 +175,14 @@
     <script src="bower_components/appverse-web-html5-core/dist/appverse-serverpush/appverse-serverpush.js"></script>
 
     <!-- REST MODULE -->
-    <script src="bower_components/lodash/lodash.min.js"></script>
+    <script src="bower_components/lodash/dist/lodash.min.js"></script>
     <script src="bower_components/restangular/dist/restangular.min.js"></script>
     <script src="bower_components/appverse-web-html5-core/dist/appverse-rest/appverse-rest.js"></script>
 
     <!-- IONIC MODULE -->
     <script src="bower_components/ionic/release/js/ionic.min.js"></script>
     <script src="bower_components/ionic/release/js/ionic-angular.min.js"></script>
-    <script src="bower_components/appverse-web-html5-core/dist/appverse-ionic/appverse-ionic.min.js"></script>
+    <script src="bower_components/appverse-web-html5-core/dist/appverse-ionic/appverse-ionic.js"></script>
 
     <!-- LOGGING MODULE -->
     <script src="bower_components/appverse-web-html5-core/dist/appverse-logging/appverse-logging.js"></script>
@@ -190,6 +190,13 @@
     <!-- CACHE MODULE -->
     <script src="bower_components/angular-cache/dist/angular-cache.min.js"></script>
     <script src="bower_components/appverse-web-html5-core/dist/appverse-cache/appverse-cache.js"></script>
+
+    <!-- SECURITY MODULE -->
+    <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.min.js"></script>
+    <script src="bower_components/appverse-web-html5-security/dist/appverse-html5-security.js"></script>
+
+    <script src="bower_components/angular-mocks/angular-mocks.js"></script>
 
     <!-- endbuild -->
 
